--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "homepage": "https://github.com//",
   "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "test": "lerna run test",
-    "publish": "lerna publish"
+    "bootstrap": "eval `fyn bash` && fynpo",
+    "test": "npm run bootstrap && lerna run test"
   },
   "dependency": {},
   "devDependencies": {
+    "fynpo": "^0.1.3",
     "lerna": "^2.0.0-rc.5",
     "lodash": "^4.10.1",
     "xclap": "^0.2.0"
